force-app/main/default/objects/CRMfusionDBR101__Scenario__c/fields/CRMfusionDBR101__Bypass_Security__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Bypass_Security__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this box is checked, Salesforce sharing rules will be ignored when attempting to find duplicate records for this scenario.  If you&#39;re not currently using security for Accounts, Contacts or Leads, this option will have no effect.</inlineHelpText>
    <label>Bypass Security</label>
    <type>Checkbox</type>
</CustomField>