force-app/main/default/objects/CRMfusionDBR101__Scenario__c/fields/CRMfusionDBR101__Enable_Dual_Filters__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Enable_Dual_Filters__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this option is checked, the scenario will use a separate set of filters for matching new records (Source Filters) to existing records (Target Filters).  If this isn&#39;t checked, the standard filters are applied to both new and existing records.</inlineHelpText>
    <label>Enable Dual Filters</label>
    <type>Checkbox</type>
</CustomField>