force-app/main/default/objects/CRMfusionDBR101__Scenario__c/fields/CRMfusionDBR101__Rebuild_Needed__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Rebuild_Needed__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Checked: A settings change or rule change has rendered this scenario&#39;s match data obsolete.  Click the &quot;Rebuild Scenario Keys&quot; button to update the match data.
Unchecked:  All keys are up-to-date, no action necessary.</inlineHelpText>
    <label>Rebuild Needed</label>
    <type>Checkbox</type>
</CustomField>