force-app/main/default/objects/CRMfusionDBR101__Scenario__c/validationRules/CRMfusionDBR101__Do_Not_Update_Error_Message_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CRMfusionDBR101__Do_Not_Update_Error_Message_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( CRMfusionDBR101__Match_on_Update_Action__c, &#39;Do Not Update&#39; ),
OR( ISNULL( CRMfusionDBR101__Error_Message__c  ), LEN(  TRIM( CRMfusionDBR101__Error_Message__c ) )  = 0 ) )</errorConditionFormula>
    <errorDisplayField>CRMfusionDBR101__Error_Message__c</errorDisplayField>
    <errorMessage>If &quot;Match on Update Action&quot; is set to &quot;Do Not Update&quot;, you must provide an error message.</errorMessage>
</ValidationRule>