force-app/main/default/objects/CRMfusionDBR101__Scenario__c/validationRules/CRMfusionDBR101__VF_Redirection_Handler.validationRule-meta.xml
<ValidationRule>
    <fullName>CRMfusionDBR101__VF_Redirection_Handler</fullName>
    <active>true</active>
    <errorConditionFormula>AND( TEXT( CRMfusionDBR101__Match_on_Insert_Action__c ) = &#39;Redirect to VisualForce Page&#39;, ISBLANK(  CRMfusionDBR101__VisualForce_Handler__c ) )</errorConditionFormula>
    <errorDisplayField>CRMfusionDBR101__VisualForce_Handler__c</errorDisplayField>
    <errorMessage>When the Match on Insert Action is set to &quot;Redirect to VisualForce Page&quot; then a value must be set for the VisualForce Redirection Page.</errorMessage>
</ValidationRule>