force-app/main/default/objects/CRMfusionDBR101__Scenario__c/listViews/CRMfusionDBR101__All.listView-meta.xml
<ListView>
    <fullName>CRMfusionDBR101__All</fullName>
    <columns>NAME</columns>
    <columns>CRMfusionDBR101__Scenario_Type__c</columns>
    <columns>CRMfusionDBR101__Deployed__c</columns>
    <columns>CRMfusionDBR101__Rebuild_Needed__c</columns>
    <columns>CRMfusionDBR101__Duplicate_Warning_Count__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CRMfusionDBR101__Match_on_Insert_Action__c</columns>
    <columns>CRMfusionDBR101__Match_on_Update_Action__c</columns>
    <filterScope>Everything</filterScope>
    <label>* All *</label>
</ListView>